v0.0.10 (xx Sep 2013)
	The default value of an option is now set with "default" instead of "value".

v0.0.9 (20 Sep 2013)
	Added "columns()".
	Minor bugfixes.

v0.0.8 (19 Sep 2013)
	Fixed "readPackage()" with a missing default file.
	Added "prefix" parameter to the "text()" function.
	"usages()" now replaces the whole "usage" string.
	Added "line()" function. It differs from "text()" in that it isn't a new
		paragraph.
	Renamed "text()" to "paragraph()".
	Added "filter" parameter to "options()".
	Minor improvements.

v0.0.7 (18 Sep 2013)
	The api has been refactored to be more fluent.
	Some bugfixes.

v0.0.6 (16 Sep 2013)
	Options with a negative Number value are parsed correctly.
	The "argument()" function has been moved from the Argp to the Body and now
		accepts a second configuration parameter.

v0.0.5 (15 Sep 2013)
	Added a "type" setting to the option configuration.

v0.0.4 (15 Sep 2013)
	Added "footer()".
	The "fail()" function now prints the "try" message.

v0.0.3 (15 Sep 2013)
	An 80 columns length was hardcoded.

v0.0.2 (14 Sep 2013)
	Added automatic string conversion.
	Added "hidden" option configuration.
	When the input is parsed the first time "argv()" frees any resource; only
		the final object is needed.
	Minor bugfixes.

v0.0.1 (13 Sep 2013)
	First release.