@@ -876,8 +876,6 @@ Argp.prototype.argv = function (){
 		});
 	}
 	
-	this.emit ("end", this._argv);
-	
 	//Uncache modules because this module is not going to be used anymore
 	delete require.cache[__filename];
 	delete require.cache[__dirname + path.sep + "error.js"];
@@ -887,10 +885,14 @@ Argp.prototype.argv = function (){
 	//The user may have a reference to the module so the whole module (the Argp
 	//instance) should also be freed
 	var o = this._argv;
+	var end = this.listeners ("end")[0];
 	
-	for (var p in module.exports){
-		module.exports[p] = null;
+	for (var p in this){
+		delete this[p];
 	}
+	
+	//Call a simple function in order to free the instance and avoid memory leaks
+	if (end) end (o);
 	
 	return o;
 };
